--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
       </nav>
       <nav class="second-line-nav">
-        <a href="index.html">
+        <a class="link-to-mpage" href="index.html">
           <img class="site-logo" src="./img/Logo.svg" alt="logo" />
         </a>
         <ul class="nav-list">
@@ -712,32 +712,32 @@
               <p class="additional-text"><span>Наш рейтинг</span> 5 из 5 (15отзывов)</p>
             </div>
             <ul class="soc-links-list">
-              <li><a href="#">
+              <li><a class="soc-links-list__item" href="#">
                   <svg class="soc-icon">
                     <use xlink:href="./sprites/soc-icon-sprite.svg#vk"></use>
                   </svg>
                 </a></li>
-              <li><a href="#">
+              <li><a class="soc-links-list__item" href="#">
                   <svg class="soc-icon">
                     <use xlink:href="./sprites/soc-icon-sprite.svg#odnoklassniki"></use>
                   </svg>
                 </a></li>
-              <li><a href="#">
+              <li><a class="soc-links-list__item" href="#">
                   <svg class="soc-icon">
                     <use xlink:href="./sprites/soc-icon-sprite.svg#linkedin"></use>
                   </svg>
                 </a></li>
-              <li><a href="#">
+              <li><a class="soc-links-list__item" href="#">
                   <svg class="soc-icon">
                     <use xlink:href="./sprites/soc-icon-sprite.svg#instagram"></use>
                   </svg>
                 </a></li>
-              <li><a href="#">
+              <li><a class="soc-links-list__item" href="#">
                   <svg class="soc-icon">
                     <use xlink:href="./sprites/soc-icon-sprite.svg#youtube"></use>
                   </svg>
                 </a></li>
-              <li><a href="#">
+              <li><a class="soc-links-list__item" href="#">
                   <svg class="soc-icon">
                     <use xlink:href="./sprites/soc-icon-sprite.svg#facebook"></use>
                   </svg>
